--- a/shop.html
+++ b/shop.html
@@ -84,7 +84,7 @@
             </div>
             <div class="row">
                 <div class="form-check col-2">
-                    <input class="form-check-input" type="checkbox" value="Dog" id="filter-dog">
+                    <input class="form-check-input" type="checkbox" value="Dog" id="filter-dog" active>
                     <label class="form-check-label" for="filter-dog">Dog</label>
                 </div>
                 <div class="form-check col-2">
