--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
             <div id="userInfo">
                 <div class="row" style="text-align: center;justify-content: center;">
                     <div class="col-4">
-                        <p><img id="userProfilePic" src="" alt="Pic" style="width: 5vw;border-radius:16px ;"></p>
+                        <p><img id="userProfilePic" src="" alt="Pic" style="width: 18vw;height:10vw ;border-radius:16px ;"></p>
                     </div>
                     <div class="col-4">
                         <p><strong>Name:</strong> <span id="userFullName"></span></p>
