--- a/shop.html
+++ b/shop.html
@@ -84,23 +84,23 @@
             </div>
             <div class="row">
                 <div class="form-check col-2">
-                    <input class="form-check-input" type="checkbox" value="Dog" id="filter-dog" checked>
+                    <input class="form-check-input" type="checkbox" value="Dog" id="filter-dog" >
                     <label class="form-check-label" for="filter-dog">Dog</label>
                 </div>
                 <div class="form-check col-2">
-                    <input class="form-check-input" type="checkbox" value="Cat" id="filter-cat" checked>
+                    <input class="form-check-input" type="checkbox" value="Cat" id="filter-cat" >
                     <label class="form-check-label" for="filter-cat">Cat</label>
                 </div>
                 <div class="form-check col-3">
-                    <input class="form-check-input" type="checkbox" value="Health" id="filter-health" checked>
+                    <input class="form-check-input" type="checkbox" value="Health" id="filter-health" >
                     <label class="form-check-label" for="filter-health">Health</label>
                 </div>
                 <div class="form-check col-2">
-                    <input class="form-check-input" type="checkbox" value="Food" id="filter-food" checked>
+                    <input class="form-check-input" type="checkbox" value="Food" id="filter-food" >
                     <label class="form-check-label" for="filter-food">Food</label>
                 </div>
                 <div class="form-check col-2">
-                    <input class="form-check-input" type="checkbox" value="Toys" id="filter-toys" checked>
+                    <input class="form-check-input" type="checkbox" value="Toys" id="filter-toys" >
                     <label class="form-check-label" for="filter-toys">Toys</label>
                 </div>
                 
