--- a/cart.html
+++ b/cart.html
@@ -138,8 +138,8 @@
                       </div>
                       <div class="mb-3">
                         <label for="expiryDate" class="form-label">Expiry Date</label>
-                        <input type="text" class="form-control" id="expiryDate" placeholder="MM/AA">
-                        <div class="invalid-feedback">Expiry Date format: MM/AA.</div>
+                        <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY">
+                        <div class="invalid-feedback">Expiry Date format: MM/YY.</div>
                       </div>
                       <div class="mb-3">
                         <label for="cvc" class="form-label">CVC</label>
