--- a/petWalking2.html
+++ b/petWalking2.html
@@ -21,7 +21,7 @@
         <div class="container-fluid justify-content-between">
             <div class="d-flex">
                 <div style="margin-top:10px">
-                <a class="navbar-brand" href="index.html" title="Paris 2024"><img src="images/FetchWell_icon.png" height="35" style="margin-bottom:10px;" /><span  style="font-family: 'Jersey 25';font-size: 26px; justify-content: center; margin-left: 10px;">FetchWell</span></a>
+                <a class="navbar-brand" href="index.html"><img src="Images/FetchWell_icon.png" height="35" style="margin-bottom:10px;" /><span  style="font-family: 'Jersey 25';font-size: 26px; justify-content: center; margin-left: 10px;">FetchWell</span></a>
                 </div>
             </div>
             <ul class="navbar-nav flex-row d-none d-md-flex" style="justify-content:space-between">
